src/test/deca/context/valid/added/empty_method.deca
/*
    Ce bloc vide est syntaxiquement valide
*/

class A{
  void emptyMethod(){

  }
}

{
  A a = new A();
  a.emptyMethod();
}
