src/test/deca/context/invalid/added/double_param.deca
/*
    Ce bloc vide est syntaxiquement valide
*/

class A {
  int sum(int a, int a){
    return a+a;
  }
}

{
}
